--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>La radio despote</title>
+    <script async src="https://sdk.scdn.co/spotify-player.js"></script>
   </head>
   <body>
     <div id="app"></div>
