--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
 		<title>La radio despote</title>
 		<script async src="https://sdk.scdn.co/spotify-player.js"></script>
 	</head>
-	<body>
+	<body class="light">
 		<div id="app"></div>
 		<script type="module" src="/src/app.tsx"></script>
 	</body>
