--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,6 @@
 	</head>
 	<body class="light">
 		<div id="app"></div>
-		<script type="module" src="/src/app.tsx"></script>
+		<script type="module" src="/src/main.tsx"></script>
 	</body>
 </html>
